[package]
edition = "2024"
name = "switchgrass-light-control"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "switchgrass-light-control"
path = "./src/bin/light_control.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32"] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "println",
  "esp32",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }

critical-section = "1.2.0"
static_cell = "2.1.1"
mpu6050-dmp = { version = "0.6.1", features = ["async", "defmt-03"] }
heapless = "0.9.1"
embedded-storage = "0.3.1"
ws2812-async = "0.3.0"
smart-leds = "0.4.0"
libm = "0.2.15"
atomic_float = "1.1.0"
embassy-sync = "0.7.2"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
